# cai

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bitcoin.toml  life.json  meta.toml  python.toml  rust.json
.github/workflows/: rust.yml
examples/: engineer.toml  life.toml
src/: common.rs  execute.rs  lib.rs  main.rs
