[package]
name = "cai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
#openai-api-rs = {git = "https://github.com/krinistof/openai-api-rs.git"}
openai-api-rs = {path = "../openai-api-rs"}
serde_json = "1.0.108"
