[package]
name = "cai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
openai-api-rs = {path = "openai-api-rs"}
regex = "1.10.2"
toml = "0.8.8"
